# useful-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: libaczutro.h
src/: CMakeLists.txt  libaczutro.cc  libaczutro.h
